objects/et4ae5__MC_CDC_Journey__c.object
<CustomObject>
    <description>Shows the details of published Journeys that are dependent on CampaignId</description>
    <fields>
        <fullName>et4ae5__ChangeType__c</fullName>
        <description>should hold a value of Create, Update, or CreateOrUpdate</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Change Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EntityName__c</fullName>
        <description>Name of the object on which Journey is dependent on</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__EventDefinitionKey__c</fullName>
        <description>Event definition key linked to Journey</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Definition Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Fields__c</fullName>
        <description>List of filter and data fields used in the Journey</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fields</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__FilterFields__c</fullName>
        <description>List of fields used in primary filter criteria in case of update</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__OwnerMid__c</fullName>
        <description>Marketing Cloud member Id used for creating token while making callout to MC</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner MID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__RecordId__c</fullName>
        <description>Campaign Id used by Journey</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>MC CDC Journey</label>
    <nameField>
        <displayFormat>MCCJ-{0000}</displayFormat>
        <label>Journey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MC CDC Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>